--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,9 @@
              <div class="container-fluid">
                  <div>
                      <!--====== BRANDING LOGO ==========-->
-                     <div class="col-md-4 col-sm-12 col-xs-12 head_left">
-                         <a href="index.html" class="logo"><span style="color:#FFC107;">met</span><span style="color:#4CAF50;">set</span><span style="color:#FF5722;">go</span>
+                     <div class="col-md-5 col-sm-12 col-xs-12 head_left">
+                         <img src="assets/img/biswa-bangla.png" alt=""><a href="index.html" class="logo"><span style="color:#FFC107;">Biswa </span><span style="color:#4CAF50;">Bangla </span><span style="color:#FF5722;">Tourism</span><br/>
+                          <small style="color:#FFC107;">Department of Tourism, Government of West Bengal</small>
                          </a>
                      </div>
                      <!--====== HELP LINE & EMAIL ID ==========-->
@@ -91,18 +92,18 @@
 
 				<form>
 					<div class="form-group">
-						<input type="text" placeholder="eg: London, Paris, Rome" class="form-control">
+						<input type="text" placeholder="eg: Digha, Darjeeling, Murshidabad" class="form-control">
 						<button class="btn"><i class="fa fa-search"></i></button>
 					</div>
 				</form>
 
 				<div class="top-search">
 					<span class="font700">Top Searches : </span>
-					<a href="">Thailand</a>
-					<a href="">Malaysia</a>
-					<a href="">Japan</a>
-					<a href="">Hong Kong</a>
-					<a href="">Singapore</a>
+					<a href="">Darjeeling</a>
+					<a href="">Digha</a>
+					<a href="">Kalimpong</a>
+					<a href="">Lava</a>
+					<a href="">Shantiniketan</a>
 				</div>
 
 			</div>
@@ -124,13 +125,13 @@
 
                         <!-- IMAGE -->
                         <div class="v_place_img">
-                            <img src="assets/img/places/t5.png" alt="Tour Booking" title="Tour Booking">
+                            <img src="assets/img/places/darjeeling.jpg" alt="Tour Booking" title="Tour Booking">
                         </div>
                         <!-- TOUR TITLE & ICONS -->
                         <div class="b_pack rows">
                             <!-- TOUR TITLE -->
                             <div class="col-md-8 col-sm-8">
-                                <h4><a href="#">Rio de Janeiro<span class="v_pl_name">(Brazil)</span></a></h4>
+                                <h4><a href="#">Darjeeling<span class="v_pl_name"></span></a></h4>
                             </div>
                             <!-- TOUR ICONS -->
                             <div class="col-md-4 col-sm-4 pack_icon">
@@ -143,13 +144,13 @@
 
                         <!-- IMAGE -->
                         <div class="v_place_img">
-                            <img src="assets/img/places/t1.png" alt="Tour Booking" title="Tour Booking">
+                            <img src="assets/img/places/dooars.jpg" alt="Tour Booking" title="Tour Booking">
                         </div>
                         <!-- TOUR TITLE & ICONS -->
                         <div class="b_pack rows">
                             <!-- TOUR TITLE -->
                             <div class="col-md-8 col-sm-8">
-                                <h4><a href="#">Paris<span class="v_pl_name">(England)</span></a></h4>
+                                <h4><a href="#">Dooars<span class="v_pl_name"></span></a></h4>
                             </div>
                             <!-- TOUR ICONS -->
                             <div class="col-md-4 col-sm-4 pack_icon">
@@ -159,11 +160,11 @@
                     </div>
                     <!-- TOUR PLACE 3 -->
                     <div class="col-md-4 col-sm-6 col-xs-12 b_packages">
-                        <div class="v_place_img"><img src="assets/img/places/t2.png" alt="Tour Booking" title="Tour Booking">
+                        <div class="v_place_img"><img src="assets/img/places/santiniketan.jpg" alt="Tour Booking" title="Tour Booking">
                         </div>
                         <div class="b_pack rows">
                             <div class="col-md-8 col-sm-8">
-                                <h4><a href="#">South India<span class="v_pl_name">(India)</span></a></h4>
+                                <h4><a href="#">Santiniketan<span class="v_pl_name"></span></a></h4>
                             </div>
                             <div class="col-md-4 col-sm-4 pack_icon">
 
@@ -172,11 +173,11 @@
                     </div>
                     <!-- TOUR PLACE 4 -->
                     <div class="col-md-4 col-sm-6 col-xs-12 b_packages">
-                        <div class="v_place_img"><img src="assets/img/places/t3.png" alt="Tour Booking" title="Tour Booking">
+                        <div class="v_place_img"><img src="assets/img/places/kalimpong.jpg" alt="Tour Booking" title="Tour Booking">
                         </div>
                         <div class="b_pack rows">
                             <div class="col-md-8 col-sm-8">
-                                <h4><a href="#">The Great Wall</a></h4>
+                                <h4><a href="#">Kalimpong</a></h4>
                             </div>
                             <div class="col-md-4 col-sm-4 pack_icon">
 
@@ -185,11 +186,11 @@
                     </div>
                     <!-- TOUR PLACE 5 -->
                     <div class="col-md-4 col-sm-6 col-xs-12 b_packages">
-                        <div class="v_place_img"><img src="assets/img/places/t4.png" alt="Tour Booking" title="Tour Booking">
+                        <div class="v_place_img"><img src="assets/img/places/digha.jpg" alt="Tour Booking" title="Tour Booking">
                         </div>
                         <div class="b_pack rows">
                             <div class="col-md-8 col-sm-8">
-                                <h4><a href="#">Nail Island<span class="v_pl_name">(Andaman)</span></a></h4>
+                                <h4><a href="#">Digha<span class="v_pl_name"></span></a></h4>
                             </div>
                             <div class="col-md-4 col-sm-4 pack_icon">
 
@@ -198,11 +199,11 @@
                     </div>
                     <!-- TOUR PLACE 6 -->
                     <div class="col-md-4 col-sm-6 col-xs-12 b_packages">
-                        <div class="v_place_img"><img src="assets/img/places/t6.png" alt="Tour Booking" title="Tour Booking">
+                        <div class="v_place_img"><img src="assets/img/places/murshidabad.jpg" alt="Tour Booking" title="Tour Booking">
                         </div>
                         <div class="b_pack rows">
                             <div class="col-md-8 col-sm-8">
-                                <h4><a href="#">Mauritius<span class="v_pl_name">(Indiana)</span></a></h4>
+                                <h4><a href="#">Murshidabad<span class="v_pl_name"></span></a></h4>
                             </div>
                             <div class="col-md-4 col-sm-4 pack_icon">
 
@@ -224,11 +225,11 @@
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="photo-block hover-aqua">
 						<div class="tour-layer delay-1"></div>
-						<img src="assets/img/category/photo_1.jpg" alt="">
+						<img src="assets/img/category/historical.jpg" alt="">
 						<div class="vertical-align">
 							<div class="photo-title">
 								<h4 class="delay-1"><b><span class="color-aqua">235</span> places</b></h4>
-								<a class="hover-it" href="#"><h3>Heritage destinations</h3></a>
+								<a class="hover-it" href="#"><h3>Historical destinations</h3></a>
 								<h5 class="delay-1">Orlando, Air/3 Nights</h5>
 							</div>
 						</div>
@@ -237,11 +238,11 @@
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="photo-block hover-aqua">
 						<div class="tour-layer delay-1"></div>
-						<img src="assets/img/category/photo_2.jpg" alt="">
+						<img src="assets/img/category/coastal.jpg" alt="">
 						<div class="vertical-align">
 							<div class="photo-title">
 								<h4 class="delay-1"><b>Only <span class="color-aqua">$235</span></b></h4>
-								<a class="hover-it" href="#"><h3>promotional trip</h3></a>
+								<a class="hover-it" href="#"><h3>Coastal destinations</h3></a>
 								<h5 class="delay-1">Orlando, Air/3 Nights</h5>
 							</div>
 						</div>
@@ -250,11 +251,11 @@
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="photo-block hover-aqua">
 						<div class="tour-layer delay-1"></div>
-						<img src="assets/img/category/photo_3.jpg" alt="">
+						<img src="assets/img/category/dakhineswar.jpg" alt="">
 						<div class="vertical-align">
 							<div class="photo-title">
 								<h4 class="delay-1"><b>Only <span class="color-aqua">$235</span></b></h4>
-								<a class="hover-it" href="#"><h3>promotional trip</h3></a>
+								<a class="hover-it" href="#"><h3>Pilgrimage destinations</h3></a>
 								<h5 class="delay-1">Orlando, Air/3 Nights</h5>
 							</div>
 						</div>
@@ -263,11 +264,11 @@
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="photo-block hover-aqua">
 						<div class="tour-layer delay-1"></div>
-						<img src="assets/img/category/photo_4.jpg" alt="">
+						<img src="assets/img/category/cultural.jpg" alt="">
 						<div class="vertical-align">
 							<div class="photo-title">
 								<h4 class="delay-1"><b>Only <span class="color-aqua">$235</span></b></h4>
-								<a class="hover-it" href="#"><h3>promotional trip</h3></a>
+								<a class="hover-it" href="#"><h3>cultural destinations</h3></a>
 								<h5 class="delay-1">Orlando, Air/3 Nights</h5>
 							</div>
 						</div>
@@ -276,11 +277,11 @@
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="photo-block hover-aqua">
 						<div class="tour-layer delay-1"></div>
-						<img src="assets/img/category/photo_5.jpg" alt="">
+						<img src="assets/img/category/himalyans.jpg" alt="">
 						<div class="vertical-align">
 							<div class="photo-title">
 								<h4 class="delay-1"><b>Only <span class="color-aqua">$235</span></b></h4>
-								<a class="hover-it" href="#"><h3>promotional trip</h3></a>
+								<a class="hover-it" href="#"><h3>Himalyans trip</h3></a>
 								<h5 class="delay-1">Orlando, Air/3 Nights</h5>
 							</div>
 						</div>
@@ -289,11 +290,11 @@
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="photo-block hover-aqua">
 						<div class="tour-layer delay-1"></div>
-						<img src="assets/img/category/photo_6.jpg" alt="">
+						<img src="assets/img/category/sundarbans.jpg" alt="">
 						<div class="vertical-align">
 							<div class="photo-title">
 								<h4 class="delay-1"><b>Only <span class="color-aqua">$235</span></b></h4>
-								<a class="hover-it" href="#"><h3>promotional trip</h3></a>
+								<a class="hover-it" href="#"><h3>sundarbans trip</h3></a>
 								<h5 class="delay-1">Orlando, Air/3 Nights</h5>
 							</div>
 						</div>
