--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,8 +5,10 @@
                  <div>
                      <!--====== BRANDING LOGO ==========-->
                      <div class="col-md-5 col-sm-12 col-xs-12 head_left">
-                         <img src="assets/img/biswa-bangla.png" alt=""><a href="index.html" class="logo"><span style="color:#FFC107;">Biswa </span><span style="color:#4CAF50;">Bangla </span><span style="color:#FF5722;">Tourism</span><br/>
-                          <small style="color:#FFC107;">Department of Tourism, Government of West Bengal</small>
+                         <img src="assets/img/biswa-bangla.png" alt=""><a href="index.html" class="logo">
+                           <span>Biswa Bangla Tourism</span>
+                           <br/>
+                          <small>Department of Tourism, Government of West Bengal</small>
                          </a>
                      </div>
                      <!--====== HELP LINE & EMAIL ID ==========-->
@@ -74,8 +76,12 @@
                                  <li><a href="contact.html">Contact Us</a>
                                  </li>
                              </ul>
-
+                             <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Sign in</a></li>
+     
+    </ul>
                          </div>
+                         
                      </div>
                  </nav>
              </div>
@@ -114,7 +120,7 @@
 				<div class="col-md-12">
 					<div class="second-title">
 						<h2>Top Searched <span>places</span></h2>
-						<p class="color-grey">Curabitur nunc erat, consequat in erat ut, congue bibendum nulla</p>
+					<!--	<p class="color-grey">Curabitur nunc erat, consequat in erat ut, congue bibendum nulla</p> -->
 					</div>
 				</div>
 			</div>
@@ -217,7 +223,7 @@
 				<div class="col-md-12">
 					<div class="second-title">
 						<h2><span>places</span> by category</h2>
-						<p class="color-grey">Curabitur nunc erat, consequat in erat ut, congue bibendum nulla</p>
+						<!--<p class="color-grey">Curabitur nunc erat, consequat in erat ut, congue bibendum nulla</p>-->
 					</div>
 				</div>
 			</div>
