--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -106,7 +106,7 @@ hr {}
    -o-transition: opacity 2s ease-in;
    -ms-transition: opacity 2s ease-in;
    transition: opacity 2s ease-in;
-   background: #303F9F;
+   background: #FFF;
     padding-left: 0pc;
     padding-bottom: 5px;
     padding-right: 0pc;
@@ -119,7 +119,7 @@ hr {}
     float: left;
 }
 .main_menu{
-  background: #3F51B5;
+  background: #012346;
   border-bottom: 1px solid #BDBDBD;
 }
 .navbar-inverse .navbar-nav > li > a {
